# curs

./: .gitignore  DOCKER_README.md  PROJECT_VERSION.md  QUICKSTART.md  README.md  TESTING.md  check_container_schema.py  check_real_db.py  check_schema.py  check_votes_db.py  clear_votes.py  docker-compose.yml  init_db.py  install_dependencies.ps1  populate_database_now.ps1  populate_db.py  recreate_votes_table.py  run_flask.py  start_all.ps1  start_backend.bat  start_backend.sh  start_frontend.bat  start_frontend.sh  test_insert.py  test_voting.ps1
server_cpp/: .dockerignore  CMakeLists.txt  Dockerfile  Makefile  README.md
server_cpp/data/: .gitkeep
server_cpp/src/: main.cpp
server_cpp/src/controllers/: ApiController.cpp  ApiController.h
server_cpp/src/http/: HttpServer.cpp  HttpServer.h
server_cpp/src/models/: Match.cpp  Match.h  MatchStats.h  Player.cpp  Player.h  Stats.h  Team.cpp  Team.h  User.h
server_cpp/src/services/: IVoteService.h  VotingService.cpp  VotingService.h
server_cpp/src/storage/: SqliteStore.cpp  SqliteStore.h
web_flask/: .dockerignore  .gitignore  Dockerfile  README.md  README_DUPLICATES.md  STATIC_HTML.md  STRUCTURE.md  VERSION_INFO.md  app.py  check_both.py  check_schema_inside.py  config.py  requirements.txt  run_tests.py  start.py  test_insert.py  test_session.py
web_flask/data/: teams.json
web_flask/routes/: __init__.py  admin.py  auth.py  comments.py  dashboard.py  health.py  matches.py  players.py  posts.py  profile.py  stats.py
web_flask/static/: admin.html  app.js  health.html  index.html  login.html  matches.html  matches.js  modal.css  players.html  posts.html  profile.html  register.html  stats.css  stats.html  style.css  test_css.html
web_flask/templates/: base.html  dashboard.html  health.html  matches.html  players.html  stats.html
web_flask/templates/auth/: login.html  register.html
web_flask/tests/: test_app.py
web_flask/utils/: __init__.py  api_client.py  database.py  decorators.py  helpers.py  logger.py  teams.py
